@@ -229,168 +229,3 @@ void CryptoManager::decodeHuffman(const u_int8_t* is, string& os, const size_t l
 	delete[] leaves;
 	delete root;
 }
-
-/**
- * Counts the occurances of each characters, and adds the total number of
- * different characters to the end of the array.
- */
-int CryptoManager::countChars(const string& aString, int* c, u_int8_t& csum) {
-	int chars = 0;
-	const u_int8_t* a = (const u_int8_t*)aString.data();
-	string::size_type len = aString.length();
-	for(string::size_type i=0; i<len; i++) {
-
-		if(c[a[i]] == 0)
-			chars++;
-
-		c[a[i]]++;
-		csum^=a[i];
-	}
-	return chars;
-}
-
-void CryptoManager::walkTree(list<Node*>& aTree) {
-	while(aTree.size() > 1) {
-		// Merge the first two nodes
-		Node* node = new Node(aTree.front(), *(++aTree.begin()));
-		aTree.pop_front();
-		aTree.pop_front();
-
-		bool done = false;
-		for(list<Node*>::iterator i=aTree.begin(); i != aTree.end(); ++i) {
-			if(*node <= *(*i)) {
-				aTree.insert(i, node);
-				done = true;
-				break;
-			}
-		}
-
-		if(!done)
-			aTree.push_back(node);
-
-	}
-}
-
-void CryptoManager::recurseLookup(vector<u_int8_t>* table, Node* node, vector<u_int8_t>& u_int8_ts) {
-	if(node->chr != -1) {
-		table[node->chr] = u_int8_ts;
-		return;
-	}
-
-	u_int8_ts.push_back(0);
-	recurseLookup(table, node->left, u_int8_ts);
-	u_int8_ts.pop_back();
-
-	u_int8_ts.push_back(1);
-	recurseLookup(table, node->right, u_int8_ts);
-	u_int8_ts.pop_back();
-}
-
-/**
- * Builds a table over the characters available (for fast lookup).
- * Stores each character as a set of u_int8_ts with values {0, 1}.
- */
-void CryptoManager::buildLookup(vector<u_int8_t>* table, Node* aRoot) {
-	vector<u_int8_t> left;
-	vector<u_int8_t> right;
-
-	left.push_back(0);
-	right.push_back(1);
-
-	recurseLookup(table, aRoot->left, left);
-	recurseLookup(table, aRoot->right, right);
-}
-
-
-struct greaterNode { 
-	bool operator() (const Node* a, const Node* b) const { 
-		return *a < *b; 
-	}
-};
-
-/**
- * Encodes a set of data with DC's version of huffman encoding..
- * @todo Use real streams maybe? or something else than string (operator[] contains a compare, slow...)
- */
-void CryptoManager::encodeHuffman(const string& is, string& os) {
-	
-	// We might as well expect this much data as huffman encoding doesn't go very far...
-	os.reserve(is.size());
-	if(is.length() == 0) {
-		os.append("HE3\x0d");
-		
-		// Nada...
-		os.append(7, '\0');
-		return;
-	}
-	// First, we count all characters
-	u_int8_t csum = 0;
-	int count[256];
-	memset(count, 0, sizeof(count));
-	int chars = countChars(is, count, csum);
-
-	// Next, we create a set of nodes and add it to a list, removing all characters that never occur.
-	
-	list<Node*> nodes;
-
-	int i;
-	for(i=0; i<256; i++) {
-		if(count[i] > 0) {
-			nodes.push_back(new Node(i, count[i]));
-		}
-	}
-
-	nodes.sort(greaterNode());
-#ifdef _DEBUG
-	for(list<Node*>::iterator it = nodes.begin(); it != nodes.end(); ++it) dcdebug("%.02x:%d, ", (*it)->chr, (*it)->weight);
-	dcdebug("\n");
-#endif
-	
-	walkTree(nodes);
-	dcassert(nodes.size() == 1);
-
-	Node* root = nodes.front();
-	vector<u_int8_t> lookup[256];
-	
-	// Build a lookup table for fast character lookups
-	buildLookup(lookup, root);
-	delete root;
-
-	// Reserve some memory to avoid all those copies when appending...
-	os.reserve(is.size() * 3 / 4);
-
-	os.append("HE3\x0d");
-	
-	// Checksum
-	os.append(1, csum);
-	string::size_type sz = is.size();
-	os.append((char*)&sz, 4);
-
-	// Character count
-	os.append((char*)&chars, 2);
-
-	// The characters and their bitlengths
-	for(i=0; i<256; i++) {
-		if(count[i] > 0) {
-			os.append(1, (u_int8_t)i);
-			os.append(1, (u_int8_t)lookup[i].size());
-		}
-	}
-	
-	BitOutputStream bos(os);
-	// The tree itself, ie the bits of each character
-	for(i=0; i<256; i++) {
-		if(count[i] > 0) {
-			bos.put(lookup[i]);
-		}
-	}
-	
-	dcdebug("u_int8_ts: %lu\n", os.size());
-	bos.skipToByte();
-
-	for(string::size_type j=0; j<is.size(); j++) {
-		dcassert(lookup[(u_int8_t)is[j]].size() != 0);
-		bos.put(lookup[(u_int8_t)is[j]]);
-	}
-	bos.skipToByte();
-}
