@@ -17,6 +17,11 @@
 * [bug 464] Added option for masked password prompt (thanks ullner)
 * [bug 922] Updated help links (thanks xan)
 * Fixed op count
+* [bug 230] Added settings to tray menu 
+* [bug 403] Unfinished file lists deleted since they're never resumed anyway
+* [bug 639] Separated remove user from queue menu option
+* [bug 766] Fixed broken app titlebar
+* Removed support for generating NMDC-style file lists (old clients won't be able to download from you)
 
 -- 0.689 2006-04-01 --
 * Fixed displaying of available bytes when user list is off
